vbnc/vbnc/tests/Errors/30022.vb
Public Class SomeClass
    Public ReadOnly Property Prop As Integer
			Get
				Return 0
			End Get
			Set(value As Integer)
			End Set
    End Property
End Class